--- a/HealthKit/templates/HealthKit/nav.html
+++ b/HealthKit/templates/HealthKit/nav.html
@@ -3,13 +3,14 @@
 <!-- Navigation Bar -->
 <div style="background-image:url("https://static-ssl.businessinsider.com/image/5810c57eb28a645d008b4fa8-889/shutterstock_156022646.jpgs"); opacity:0.5;">
 <div class="w3-bar w3-white w3-large" style="min-height:100px">
-  <a href="#rooms" class="w3-bar-item w3-button w3-mobile"><br>Logo</br></a>
-  <a href="#rooms" class="w3-bar-item w3-button w3-mobile"><br>Home</br></a>
-  <a href="#about" class="w3-bar-item w3-button w3-mobile"><br>Doctors</br></a>
-  <a href="#contact" class="w3-bar-item w3-button w3-mobile"><br>Help</br></a>
-  <a href="#contact" class="w3-bar-item w3-button w3-mobile"><br>Knowledge base</br></a>
-  <a href="#contact" class="w3-bar-item w3-button w3-mobile"><br>Sign Up</a>
-  <a href="" class="w3-bar-item w3-button w3-right w3-light-grey w3-mobile"><br>LogOut</br></a>
+  <a href="#" class="w3-bar-item w3-button w3-mobile"><br><h1>Logo</h1></br></a>
+  <a href="/HealthKit/Home" class="w3-bar-item w3-button w3-mobile"><br><h1>Home</h1></br></a>
+  <a href="/HealthKit/doctorsList" class="w3-bar-item w3-button w3-mobile"><br><h1>Doctors</h1></br></a>
+  <a href="#contact" class="w3-bar-item w3-button w3-mobile"><br><h1>Help</h1></br></a>
+  <a href="/HealthKit/Knowledge" class="w3-bar-item w3-button w3-mobile"><br><h1>Knowledge base</h1></br></a>
+  <a href="/HealthKit/signup" class="w3-bar-item w3-button w3-mobile"><br><h1>Sign Up</h1></a>
+ <a href="/HealthKit/login" class="w3-bar-item w3-button w3-mobile"><br><h1>Login</h1></a>
+
 </div>
 {% block content %}
 {% endblock %}
